--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "description": "<p align=\"center\">   <a href=\"http://nestjs.com/\" target=\"blank\"><img src=\"https://nestjs.com/img/logo-small.svg\" width=\"200\" alt=\"Nest Logo\" /></a> </p>",
   "main": "server.js",
   "scripts": {
-    "start": "ts-node server.ts"
+    "start": "ts-node-dev src/server.ts"
   },
   "author": "kadirkaplan",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "joi": "^17.12.2",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.3"
+    "mongoose": "^8.2.3",
+    "swagger-ui-express": "^5.0.0",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   }
 }
