--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "kadirkaplan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "joi": "^17.12.2",
+    "meilisearch": "^0.40.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.3",
     "swagger-ui-express": "^5.0.0",
